# get_the_gold

./: .gitignore  Angle2d.hpp  Basis3d.cpp  Basis3d.hpp  CMakeLists.txt  Logger.hpp  Logger.inl  Matrix.cpp  Matrix.hpp  Matrix3x3.hpp  Pos3d.cpp  Pos3d.hpp  README.md  Shape.hpp  Shape2d.cpp  Shape2d.hpp  Shape3d.cpp  Shape3d.hpp  SpaceShip.cpp  SpaceShip.hpp  SquareMatrix.hpp  StringUtils.hpp  Surface.cpp  Surface.hpp  Thruster.cpp  Thruster.hpp  Torque.cpp  Torque.hpp  Utils.hpp  Vector2d.cpp  Vector2d.hpp  Vector3d.cpp  Vector3d.hpp  _Matrix.cpp  _Matrix.hpp  main.cpp
